syntax = "proto3";

option csharp_namespace = "GrpcProductServiceApi";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

package product;


service GrpcProductService {
  rpc AddNewProduct (AddNewProductRequest) returns (AddNewProductResponse) {
    option (google.api.http) = {
      post: "/product"
      body: "*"
    };
  }
  rpc GetProductById(GetProductByIdRequest) returns (GetProductByIdResponse)
  {
    option (google.api.http) = {
      get: "/product/{id}"
    };
  }
  rpc UpdateProductPrice(UpdateProductPriceRequest) returns (google.protobuf.Empty)
  {
    option (google.api.http) = {
      post: "/product/{id}"
      body: "*"
    };
  }
  rpc GetProductsByFilters(GetProductsByFiltersRequest) returns (GetProductsByFiltersResponse)
  {
    option (google.api.http) = {
      post: "/product/filtered"
      body: "*"
    };
  }
}

message AddNewProductRequest {
  string name = 1;
  double price = 2;
  double weight = 3;
  ProductCategoryGrpc category = 4;
  google.protobuf.Timestamp date_of_creation = 5;
  uint64 warehouse_id = 6;
}

message AddNewProductResponse {
  uint64 id = 1;
}

message GetProductByIdRequest {
  uint64 id = 1;
}

message GetProductByIdResponse {
  ProductGrpc product = 1;
}

message UpdateProductPriceRequest {
  uint64 id = 1;
  double new_price = 2;
}
 
message GetProductsByFiltersRequest {
  ProductCategoryGrpc category = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
  uint64 warehouse_id = 4;
  int32 page_size = 5;
  int32 page_number = 6;
}

message GetProductsByFiltersResponse {
  repeated ProductGrpc products_list = 1;
}

message ProductGrpc {
  uint64 id = 1;
  string name = 2;
  double price = 3;
  double weight = 4;
  ProductCategoryGrpc category = 5;
  google.protobuf.Timestamp date_of_creation = 6;
  uint64 warehouse_id = 7;
}
enum ProductCategoryGrpc {
    PRODUCT_CATEGORY_GRPC_UNSPECIFIED = 0;
    General = 1;
    HouseholdChemicals = 2;
    Appliances = 3;
    FoodProducts = 4;
}